<?xml version="1.0"?>
<package>
  <name>grasp_planning_graspit</name>
  <version>1.2.0</version>
  <description>
        The grasp_planning_graspit package
        This package.xml file is only required if the source is to be
        built with catkin. You can also build using cmake only, in which
        case this file is not required.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/grasp_planning_graspit</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- depends only on eigen_conversion because it's available as ROS package,
     and searching for it with separate cmake module should not be necessary.
     CMakeLists.txt however also compiles without ROS dependencies if not
     built with catkin. -->
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roslint</build_depend>

  <!-- this is required if not building graspit fork locally -->
  <!--build_depend>graspit</build_depend-->

  <!-- System dependencies: -->

  <!-- boost works with bloom only if libboost-all-dev is used -->
  <build_depend>boost</build_depend>
  <build_depend>libsoqt4-dev</build_depend>
  <build_depend>libcoin80-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>libqhull</build_depend>
  <build_depend>git</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>libsoqt4-dev</run_depend>
  <run_depend>libcoin80-dev</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>libblas-dev</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>libqhull</run_depend>

  <!-- You need to uncomment this if you are using -DBUILD_GRASPIT=false--> 
  <!--build_depend> graspit </build_depend>
  <run_depend> graspit </run_depend-->

  <!-- this is required if not building graspit fork locally -->
  <!--run_depend>graspit</run_depend-->
  <run_depend>eigen_conversions</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
