<?xml version="1.0"?>
<package>
  <name>graspit_tools</name>
  <version>1.2.0</version>
  <description>All packages related to the graspit</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/jaco</url> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>grasp_planning_graspit</run_depend>
  <run_depend>grasp_planning_graspit_ros</run_depend>
  <run_depend>grasp_planning_graspit_msgs</run_depend>
  <run_depend>urdf2graspit</run_depend>
  <run_depend>jaco_graspit_sample</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

