<?xml version="1.0"?>
<package>
  <name>ivcon</name>
  <version>0.0.0</version>
  <description>
    Inventor conversion library required for urdf2graspit.
    This source code is heavily based on the **ivcon** package at [https://sourceforge.net/projects/ivcon/](https://sourceforge.net/projects/ivcon/).
    More details in the README. 
    </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Common Public License 1.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <build_depend>libsoqt4-dev</build_depend>
  <build_depend>libcoin80-dev</build_depend>
  <build_depend>libqt4-dev</build_depend>

  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
